<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ifpr.androidapptemplate.ui.registro.RegistroFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_registro" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ifpr.androidapptemplate.ui.postagens.PostagensFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_postagens" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ifpr.androidapptemplate.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
        
    <!-- Lista de registros do usuário (navegação interna da aba Registro) -->
    <fragment
        android:id="@+id/navigation_registros_list"
        android:name="com.ifpr.androidapptemplate.ui.registro.RegistrosListFragment"
        android:label="@string/meus_registros_title"
        tools:layout="@layout/fragment_registros_list" />

    <fragment
        android:id="@+id/navigation_comentarios"
        android:name="com.ifpr.androidapptemplate.ui.comentarios.ComentariosFragment"
        android:label="Comentários"
        tools:layout="@layout/fragment_comentarios">
        <argument
            android:name="postId"
            app:argType="string" />
    </fragment>

</navigation>